syntax = "proto3";
package school;
message PBUser {
    uint64 user_id = 1;
    string name = 2;
    string mobile = 3;
};